# visionary

./: .gitignore  gcloud.sh  launch_debug.sh  pyproject.toml  setup.sh
scripts/breakout-offline/: collect_rollouts.py  dqn.py  replay_rollout.py
scripts/cloud/: README.md  breakout_dynamics.yaml  breakout_tokenizer.yaml  example_watcher.yaml  starter.sh  watcher.py  watcher.yaml
scripts/data/: benchmark_arrayrecord_loading.py  convert_to_arrayrecord.py
scripts/dreamer4/: diagnose_tokenizer.py  reconstruct_tokenizer.py  save_tokenized_dataset.py  smoke_test_dynamics_synthetic.py  train_dynamics.py  train_tokenizer.py
scripts/dreamer4/config/: breakout.yaml  breakout_dynamics.yaml  breakout_tokenizer.yaml  train_tokenizer.yaml
visionary/: collect_rollouts.py  dataset.py  dqn.py  dynamics.py  swiglu.py  tokenizer.py  tokenizer_preprocessor.py  transformer.py
visionary/common/: buffers.py  checkpoint.py  env.py  jax.py  rollout.py  tokenizer_checkpoint.py  train_state.py  wandb.py
visionary/config/: collect_rollouts.yaml  dqn.yaml
visionary/lpips/: __init__.py
