[project]
name = "visionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.11.2",
    "einops>=0.8.2",
    "flax>=0.12.5",
    "grain>=0.2.16",
    "gymnasium[other]>=1.2.3",
    "hydra-core>=1.3.2",
    "importlib-resources>=6.5.2",
    "jax>=0.9.1",
    "moviepy>=2.2.1",
    "orbax-checkpoint>=0.11.33",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visionary"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
